fix: publish only qualified OSM leads