@@ -1,6 +1,5 @@
 package com.gendaz.leads.service.provider;
 
-import com.gendaz.leads.domain.LeadCandidate;
 import com.gendaz.leads.entity.OsmCatalogRegion;
 import com.gendaz.leads.entity.OsmPlace;
 import com.gendaz.leads.repository.OsmCatalogRegionRepository;
@@ -9,9 +8,12 @@ import com.gendaz.leads.util.Normalizer;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.jdbc.core.RowMapper;
 import org.springframework.jdbc.core.namedparam.NamedParameterJdbcTemplate;
+import org.springframework.jdbc.core.namedparam.SqlParameterSource;
 
 import java.util.ArrayList;
 import java.util.Collections;
@@ -23,8 +25,7 @@ import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
 
-import org.springframework.jdbc.core.RowMapper;
-import org.springframework.jdbc.core.namedparam.SqlParameterSource;
+import org.springframework.jdbc.core.namedparam.MapSqlParameterSource;
 
 @ExtendWith(MockitoExtension.class)
 class LocalOsmCatalogProviderTest {
@@ -48,8 +49,7 @@ class LocalOsmCatalogProviderTest {
                 jdbcTemplate,
                 normalizer,
                 10,
-                300,
-                50.0
+                300
         );
     }
 
@@ -96,87 +96,60 @@ class LocalOsmCatalogProviderTest {
     }
 
     @Test
-    void baseShopBarberWithoutPhoneCompanionSameNameWithin50mRecoversPhone() {
+    void queryRequiresPhoneNotNullAndNotBlank() {
         OsmCatalogRegion region = new OsmCatalogRegion();
         region.setId(1L);
         region.setCatalogStatus("READY");
-
-        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(
-                anyString(), anyString(), eq("READY")))
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
                 .thenReturn(List.of(region));
-
-        OsmPlace base = new OsmPlace();
-        base.setId(1L);
-        base.setOsmType("node");
-        base.setOsmId(100L);
-        base.setBusinessName("Barbearia Teste");
-        base.setNormalizedName("barbearia teste");
-        base.setLatitude(-15.6);
-        base.setLongitude(-56.1);
-        base.setPhone(null);
-        base.setTags("{}");
-
-        OsmPlace companion = new OsmPlace();
-        companion.setId(2L);
-        companion.setOsmType("node");
-        companion.setOsmId(101L);
-        companion.setBusinessName("Barbearia Teste");
-        companion.setNormalizedName("barbearia teste");
-        companion.setLatitude(-15.6001);
-        companion.setLongitude(-56.1001);
-        companion.setPhone("+5565999999999");
-        companion.setTags("{}");
-
         when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
-                .thenReturn(List.of(base))
-                .thenReturn(List.of(companion));
+                .thenReturn(Collections.emptyList());
 
-        LocalOsmCatalogProvider.CatalogPage page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
+        provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
 
-        assertEquals(1, page.candidates().size());
-        assertEquals("+5565999999999", page.candidates().get(0).getPhone());
+        ArgumentCaptor<String> sqlCaptor = ArgumentCaptor.forClass(String.class);
+        verify(jdbcTemplate).query(sqlCaptor.capture(), any(SqlParameterSource.class), any(RowMapper.class));
+        String sql = sqlCaptor.getValue();
+        assertTrue(sql.contains("phone IS NOT NULL"), "SQL must require phone IS NOT NULL");
+        assertTrue(sql.contains("BTRIM(phone) <> ''"), "SQL must require BTRIM(phone) <> ''");
+        assertTrue(sql.contains("ORDER BY normalized_name, id"), "SQL must order by normalized_name, id");
+        assertFalse(sql.contains("CASE WHEN NULLIF"), "SQL should not prioritize phone case");
     }
 
     @Test
-    void baseShopBarberWithoutPhoneCompanionSameNameOver50mDoesNotRecoverPhone() {
+    void nextOffsetAndHasMoreCorrect() {
         OsmCatalogRegion region = new OsmCatalogRegion();
         region.setId(1L);
         region.setCatalogStatus("READY");
-
-        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(
-                anyString(), anyString(), eq("READY")))
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
                 .thenReturn(List.of(region));
 
-        OsmPlace base = new OsmPlace();
-        base.setId(1L);
-        base.setOsmType("node");
-        base.setOsmId(100L);
-        base.setBusinessName("Barbearia Teste");
-        base.setNormalizedName("barbearia teste");
-        base.setLatitude(-15.6);
-        base.setLongitude(-56.1);
-        base.setPhone(null);
-        base.setTags("{}");
-
-        OsmPlace companion = new OsmPlace();
-        companion.setId(2L);
-        companion.setOsmType("node");
-        companion.setOsmId(101L);
-        companion.setBusinessName("Barbearia Teste");
-        companion.setNormalizedName("barbearia teste");
-        companion.setLatitude(-15.7);
-        companion.setLongitude(-56.2);
-        companion.setPhone("+5565999999999");
-        companion.setTags("{}");
-
+        // target 1 => pageLimit =30, return 30 rows => hasMore true
+        List<OsmPlace> thirty = new ArrayList<>();
+        for (int i=0;i<30;i++) {
+            OsmPlace p = place(i, "Barbearia Teste "+i, "barbearia teste "+i, "{\"shop\":\"barber\"}", "+5565999991111");
+            thirty.add(p);
+        }
         when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
-                .thenReturn(List.of(base))
-                .thenReturn(List.of(companion));
+                .thenReturn(thirty);
+        var page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
+        assertEquals(30, page.rawRows());
+        assertEquals(30, page.nextOffset());
+        assertTrue(page.hasMore());
 
-        LocalOsmCatalogProvider.CatalogPage page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
-
-        assertEquals(1, page.candidates().size());
-        assertNull(page.candidates().get(0).getPhone());
+        // next page: less than limit => hasMore false
+        OsmCatalogRegion region2 = new OsmCatalogRegion();
+        region2.setId(1L);
+        region2.setCatalogStatus("READY");
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
+                .thenReturn(List.of(region2));
+        List<OsmPlace> one = List.of(place(0,"Barbearia Teste","barbearia teste","{\"shop\":\"barber\"}","+5565999991111"));
+        when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
+                .thenReturn(one);
+        var page2 = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 30);
+        assertEquals(1, page2.rawRows());
+        assertEquals(31, page2.nextOffset());
+        assertFalse(page2.hasMore());
     }
 
     @Test
@@ -184,12 +157,8 @@ class LocalOsmCatalogProviderTest {
         OsmCatalogRegion region = new OsmCatalogRegion();
         region.setId(1L);
         region.setCatalogStatus("READY");
-
-        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(
-                anyString(), anyString(), eq("READY")))
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
                 .thenReturn(List.of(region));
-
-        // Create 30 places for first page
         List<OsmPlace> page1Places = new ArrayList<>();
         for (int i = 0; i < 30; i++) {
             OsmPlace place = new OsmPlace();
@@ -201,21 +170,14 @@ class LocalOsmCatalogProviderTest {
             place.setLatitude(-15.6);
             place.setLongitude(-56.1);
             place.setPhone("+5565999999999");
-            place.setTags("{}");
+            place.setTags("{\"shop\":\"barber\"}");
             page1Places.add(place);
         }
-
-        // discoverPage makes 2 queries per call: basePlaces and companions
-        // First call (offset=0): basePlaces returns 30 places, companions returns empty
-        // Second call (offset=30): basePlaces returns empty
         when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
-                .thenReturn(page1Places)  // basePlaces for page 1
-                .thenReturn(Collections.emptyList())  // companions for page 1
-                .thenReturn(Collections.emptyList()); // basePlaces for page 2 (empty)
-
-        LocalOsmCatalogProvider.CatalogPage page1 = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 0);
-        LocalOsmCatalogProvider.CatalogPage page2 = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 30);
-
+                .thenReturn(page1Places)
+                .thenReturn(Collections.emptyList());
+        var page1 = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 0);
+        var page2 = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 30);
         assertEquals(30, page1.rawRows());
         assertEquals(30, page1.nextOffset());
         assertEquals(0, page2.rawRows());
@@ -226,23 +188,8 @@ class LocalOsmCatalogProviderTest {
         OsmCatalogRegion region = new OsmCatalogRegion();
         region.setId(1L);
         region.setCatalogStatus("READY");
-
-        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(
-                anyString(), anyString(), eq("READY")))
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
                 .thenReturn(List.of(region));
-
-        OsmPlace place = new OsmPlace();
-        place.setId(1L);
-        place.setOsmType("node");
-        place.setOsmId(100L);
-        place.setBusinessName("Barbearia Teste");
-        place.setNormalizedName("barbearia teste");
-        place.setLatitude(-15.6);
-        place.setLongitude(-56.1);
-        place.setPhone("+5565999999999");
-        place.setTags("{}");
-
-        // target=30 gives pageLimit=300, we return 300 places = hasMore=true
         List<OsmPlace> manyPlaces = new ArrayList<>();
         for (int i = 0; i < 300; i++) {
             OsmPlace p = new OsmPlace();
@@ -254,16 +201,12 @@ class LocalOsmCatalogProviderTest {
             p.setLatitude(-15.6);
             p.setLongitude(-56.1);
             p.setPhone("+5565999999999");
-            p.setTags("{}");
+            p.setTags("{\"shop\":\"barber\"}");
             manyPlaces.add(p);
         }
-
         when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
-                .thenReturn(manyPlaces)  // basePlaces
-                .thenReturn(Collections.emptyList()); // companions
-
-        LocalOsmCatalogProvider.CatalogPage page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 0);
-
+                .thenReturn(manyPlaces);
+        var page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 30, 0);
         assertEquals(300, page.rawRows());
         assertTrue(page.hasMore());
     }
@@ -273,30 +216,110 @@ class LocalOsmCatalogProviderTest {
         OsmCatalogRegion region = new OsmCatalogRegion();
         region.setId(1L);
         region.setCatalogStatus("READY");
-
-        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(
-                anyString(), anyString(), eq("READY")))
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
                 .thenReturn(List.of(region));
-
-        OsmPlace place = new OsmPlace();
-        place.setId(1L);
-        place.setOsmType("node");
-        place.setOsmId(100L);
-        place.setBusinessName("Barbearia Teste");
-        place.setNormalizedName("barbearia teste");
-        place.setLatitude(-15.6);
-        place.setLongitude(-56.1);
-        place.setPhone("+5565999999999");
-        place.setTags("{}");
-
-        // Two queries: basePlaces and companions
+        OsmPlace place = place(1,"Barbearia Teste","barbearia teste","{\"shop\":\"barber\"}","+5565999999999");
         when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
-                .thenReturn(List.of(place))  // basePlaces
-                .thenReturn(Collections.emptyList()); // companions
-
-        LocalOsmCatalogProvider.CatalogPage page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
-
+                .thenReturn(List.of(place));
+        var page = provider.discoverPage("barbearia", "Cuiabá", "Brasil", 1, 0);
         assertEquals(1, page.rawRows());
         assertFalse(page.hasMore());
+    }
+
+    @Test
+    void nailDesignerStrictShopBeautyNailsMatches() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("nail designer");
+        OsmPlace p = place(1,"Nails Studio","nails studio","{\"shop\":\"beauty\",\"beauty\":\"nails\"}","+5565999991111");
+        p.setNormalizedName("nails studio");
+        assertTrue(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void nailDesignerShopBeautyAloneRejected() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("nail designer");
+        OsmPlace p = place(1,"Beleza Pura","beleza pura","{\"shop\":\"beauty\"}","+5565999991111");
+        assertFalse(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void nailDesignerShopClothesRejected() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("nail designer");
+        OsmPlace p = place(1,"Loja Roupas","loja roupas","{\"shop\":\"clothes\"}","+5565999991111");
+        assertFalse(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void nailDesignerFallbackNameMatches() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("nail designer");
+        OsmPlace p = place(1,"Nail Designer Studio","nail designer studio","{\"shop\":\"clothes\"}","+5565999991111");
+        // tags don't match but name contains fallback "nail designer" => should match
+        assertTrue(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void barbeariaStrictShopBarberMatches() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("barbearia");
+        OsmPlace p = place(1,"Barbearia Teste","barbearia teste","{\"shop\":\"barber\"}","+5565999991111");
+        assertTrue(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void barbeariaShopHairdresserBarberMatches() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("barbearia");
+        OsmPlace p = place(2,"Salao Teste","salao teste","{\"shop\":\"hairdresser\",\"hairdresser\":\"barber\"}","+5565999991111");
+        assertTrue(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void barbeariaShopHairdresserAloneRejected() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("barbearia");
+        OsmPlace p = place(3,"Salao Cabelo","salao cabelo","{\"shop\":\"hairdresser\"}","+5565999991111");
+        // name not containing barbearia/barber
+        p.setBusinessName("Salao Cabelo");
+        p.setNormalizedName("salao cabelo");
+        assertFalse(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void barbeariaFallbackNameMatches() {
+        NicheMapper.NicheStrategy strategy = NicheMapper.resolve("barbearia");
+        OsmPlace p = place(4,"Barbearia Central","barbearia central","{\"shop\":\"hairdresser\"}","+5565999991111");
+        assertTrue(provider.matchesStrategy(p, strategy));
+    }
+
+    @Test
+    void providerFiltersNicheMismatch() {
+        OsmCatalogRegion region = new OsmCatalogRegion();
+        region.setId(1L);
+        region.setCatalogStatus("READY");
+        when(regionRepository.findByNormalizedCityAndCountryCodeAndCatalogStatus(anyString(), anyString(), eq("READY")))
+                .thenReturn(List.of(region));
+        OsmPlace valid = place(1,"Nails Studio","nails studio","{\"shop\":\"beauty\",\"beauty\":\"nails\"}","+5565999991111");
+        OsmPlace invalid = place(2,"Loja Roupas","loja roupas","{\"shop\":\"clothes\"}","+5565999991111");
+        when(jdbcTemplate.query(anyString(), any(SqlParameterSource.class), any(RowMapper.class)))
+                .thenReturn(List.of(valid, invalid));
+        var page = provider.discoverPage("nail designer", "Cuiabá", "Brasil", 10, 0);
+        // valid passes matchesStrategy, invalid fails => only 1 candidate
+        assertEquals(2, page.rawRows());
+        assertEquals(1, page.candidates().size());
+        assertEquals("Nails Studio", page.candidates().get(0).getBusinessName());
+    }
+
+    private OsmPlace place(long id, String name, String normalized, String tags, String phone) {
+        OsmPlace p = new OsmPlace();
+        p.setId(id);
+        p.setOsmType("node");
+        p.setOsmId(100L + id);
+        p.setBusinessName(name);
+        p.setNormalizedName(normalized);
+        p.setLatitude(-15.6);
+        p.setLongitude(-56.1);
+        p.setPhone(phone);
+        p.setTags(tags);
+        p.setCity("Cuiabá");
+        p.setState("MT");
+        p.setCountry("Brasil");
+        p.setCountryCode("br");
+        return p;
     }
 }
